Remove whitespace styling as it's no longer used

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -606,7 +606,6 @@ $cell-padding: 0.5rem;
   font-family: "Roboto Slab";
   font-size: 1.5rem;
   font-weight: 500;
-  white-space: pre;
 }
 
 .hidden-periods {
@@ -762,7 +761,6 @@ $cell-padding: 0.5rem;
     font-family: "Roboto Slab";
     font-size: 0.9rem;
     font-weight: 500;
-    white-space: pre;
   }
 
   .waiting-message {
